# kkro

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
examples/: 1.b  2.b  3.b
kkro/: __main__.py  grammar.lark  parser.py
test/: test_xion.py
test/fixture/: program_1_ast.py  program_1_parse_tree.py  program_2_parse_tree.py  program_3_parse_tree.py
tests/: test_kkro.py  test_xion.py
xion/: __main__.py  b_grammar.lark  grammar.lark  ir.py  parser.py  transformer.py
