[tool.poetry]
name = "kkro"
version = "1.0.0"
description = "B language compiler in Python 3"
authors = ["Jahan Addison <jahan@jahanaddison.com>"]

[tool.poetry.dependencies]
python = "3.13.0"
mypy = "^1.13.0"
flake8 = "^3.6"
lark = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
