[metadata]
name = kkro
description = B Language Compiler in Python 3
version = 0.0.1
author = Jahan Addison
author-email = jahan@jahanaddison.com
home-page = https://github.com/jahan-addison/kkro
long-description = file: README.md
license = Apache 2
license-file = LICENSE
platform = any
keywords = B language compiler theory parser lark python syntax parsing
classifiers =
    Development Status :: 3 - Alpha
    License :: Apache 2 License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.7

[flake8]
ignore =
    F841
max-line-length = 119
