[metadata]
name = xion
description = Compiler frontend for the B Language
version = 1.0.0
author = Jahan Addison
author-email = jahan@jahanaddison.com
home-page = https://github.com/jahan-addison/xion
long-description = file: README.md
license = Apache 2
license-file = LICENSE
platform = any
keywords = B language compiler python syntax parsing lexing abstract
classifiers =
    Development Status :: Alpha
    License :: Apache 2 License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3

[flake8]
ignore =
    F841
max-line-length = 120
